syntax = "proto3";

option csharp_namespace = "OfferGrpcService.Protos";

service OfferGrpcService {
	rpc GetOfferList (Empty) returns (Offers);
	rpc GetOffer (GetOfferDetailRequest) returns (OfferDetail);
	rpc AddOffer (AddOfferDetailRequest) returns (OfferDetail);
	rpc UpdateOffer (UpdateOfferDetailRequest) returns (OfferDetail);
	rpc DeleteOffer (DeleteOfferRequest) returns (DeleteOfferResponse);
}

message GetOfferDetailRequest {
	int32 productId = 1;
}

message OfferDetail {
	int32 id = 1;
	string productName = 2;
	string offerDescription = 3;
}

message AddOfferDetailRequest {
	OfferDetail offer = 1;
}

message UpdateOfferDetailRequest {
	OfferDetail offer = 1;
}

message DeleteOfferRequest {
	int32 productId = 1;
}

message DeleteOfferResponse {
	bool isDeleted = 1;
}

message Empty {

}

message Offers {
	repeated OfferDetail items = 1;
}
